syntax="proto3";

package comtypes;
option go_package = "github.com/jonashiltl/sessions-backend/packages/comtypes/comtypes";

message FriendRequestNotification {
    string requesterId = 1;
    string requestedId = 2;
}

message PartyCreatedNotification {
    string creatorId = 1;
    string title = 2;
}

message CommentedNotification {
    string authorId = 1;
    string partyId = 2;
    string body = 3;
}